# tarea2BDD2

./: .env.example  README.md  initial_data.sql  pyproject.toml
app/: __init__.py  config.py  db.py  models.py  security.py
app/controllers/: __init__.py  auth.py  book.py  category.py  loan.py  review.py  user.py
app/dtos/: __init__.py  book.py  category.py  loan.py  review.py  user.py
app/repositories/: book.py  category.py  loan.py  review.py  user.py
migrations/: env.py  script.py.mako
migrations/versions/: 20251120_1346-acc8ae75f9e8_init.py  20251201_1127-ba772f8fc908_add_categories.py  20251201_1444-35056d0028d3_add_reviews.py  20251201_1626-16c13857cb83_add_new_book_columns.py  20251201_1703-ae9595cb99cb_book_description_made_optional.py  20251201_2218-3382562d10b9_added_columns_for_user_model.py  20251202_1846-3f73e53da4a3_loans_model_upgraded.py
