[project]
name = "learning-litestar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "litestar[jwt,sqlalchemy,standard]>=2.18.0",
    "psycopg[binary,pool]>=3.2.12",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
]


[tool.alembic]
script_location = "%(here)s/migrations"
file_template = "%%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
prepend_sys_path = ["."]
